<resources>
    <string name="app_name">PokemonDex</string>
    <string name="none">PokemonDex</string>
    <string name="search">Search..</string>
    <string name="binding_null">Binding is not initialized!</string>
    <string name="pokedex">Pokédex</string>

    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="satk">SATK</string>
    <string name="sdef">SDEF</string>
    <string name="spd">SPD</string>

    <string name="moves">Moves</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="about">About</string>
    <string name="sort_by">Sort by:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="base_stats">Base Stats</string>
    <string name="home_page_iv">home_page_iv</string>
    <string name="detail_page_iv">detail_page_iv</string>


</resources>