<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_popup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_backgroun"
    android:padding="6dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/tv_popupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="@string/sort_by"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_popupTitle">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp">

            <RadioButton
                android:id="@+id/rb_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/number"
                android:textColor="@color/black"
                app:buttonTint="#DC0A2D" />

            <RadioButton
                android:id="@+id/rb_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/name"
                app:buttonTint="#DC0A2D" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>