<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_Home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    tools:visibility="visible"
    android:background="@color/identity_primary">

    <ImageView
        android:id="@+id/ivPokemonLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_20dp"
        android:src="@drawable/ic_pokeball"
        android:contentDescription="@string/home_page_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPokedex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/pokedex"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sp"
        app:layout_constraintBottom_toBottomOf="@id/ivPokemonLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/ivPokemonLogo"
        app:layout_constraintTop_toTopOf="@+id/ivPokemonLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldSearch"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_8dp"
        android:hint="@string/search"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/_24dp"
        app:boxCornerRadiusBottomStart="@dimen/_24dp"
        app:boxCornerRadiusTopEnd="@dimen/_24dp"
        app:boxCornerRadiusTopStart="@dimen/_24dp"
        app:boxStrokeColor="@color/identity_primary"
        app:boxStrokeWidth="@dimen/_0dp"
        app:endIconDrawable="@drawable/ic_search_red"
        app:hintTextColor="@color/identity_primary"
        app:layout_constraintEnd_toStartOf="@+id/cvOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPokedex"
        app:startIconDrawable="@drawable/ic_search_blue"
        app:startIconTint="@color/identity_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textCursorDrawable="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/light_blue300"
            android:textSize="@dimen/_12sp"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvOrder"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_0dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_32dp"
        app:layout_constraintBottom_toBottomOf="@+id/textFieldSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textFieldSearch">

        <ImageView
            android:id="@+id/ivButtonOrder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:padding="@dimen/_8dp"
            android:contentDescription="@string/home_page_iv"
            android:src="@drawable/ic_search_number"
            android:scaleType="centerCrop">
        </ImageView>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_marginHorizontal="@dimen/_4dp"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginBottom="@dimen/_4dp"
        android:elevation="@dimen/_16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldSearch"
        app:strokeWidth="@dimen/_0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPoke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_8dp"
            android:paddingVertical="@dimen/_20dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:itemCount="24"
            tools:listitem="@layout/item_pokemons" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>